--- a/css/common.css
+++ b/css/common.css
@@ -67,8 +67,10 @@ padding-left: 16px;
   flex-wrap: wrap;
   row-gap: 48px;
   column-gap: 24px;
-  width: 1128px;
-  margin: 100px, 156px;
+  width: 1440px;
+  margin-left: 156px;
+  margin-right: 156px;
+  margin-top: 100px;
 }
 
 .img-gallery {
