--- a/css/common.css
+++ b/css/common.css
@@ -13,69 +13,197 @@ body {
   line-height: 1.5;
 }
 
-ul, h2 {
-  list-style-type: none;
+
+input {
+  padding: 8px;
+  font: inherit;
+}
+button {
+  padding: 8px 12px;
+  cursor: pointer;
+}
+a {
+  font-size: 16px;
+  font-weight: 400;
+}
+ul,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  list-style: none;
   padding: 0;
   margin: 0;
-
 }
-
-
+img {
+  display: block;
+  width: 100%;
+}
+/* task 1 */
+ul#categories {
+  max-width: 440px;
+  display: inline-flex;
+  padding: 24px;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 24px;
+}
 h2 {
-  font-family: "Montserrat", sans-serif;
-  font-weight: 600;
   font-size: 24px;
-  line-height: 1.33333;
-  letter-spacing: 0.04em;
-  color: #2e2f42;
-margin-bottom: 16px;
+  font-weight: 600;
+  letter-spacing: 0.96px;
 }
-
-li.item {
+ul#categories ul {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
+.item {
+  display: flex;
+  padding: 16px;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 16px;
   border-radius: 8px;
-padding: 16px;
-margin-bottom: 24px;
-width: 392px;
-height: 100%;
-background: #f6f6fe;
-border: 1px solid floralwhite;
+  background: #F6F6FE;
+}
+.item li {
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 1.5; /* 150% */
+  letter-spacing: 0.64px;
+  border-radius: 4px;
+  border: 1px solid #808080;
+  width: 360px;
+  padding: 8px 16px 8px 16px;
 }
 
 
-li{
+.gallery {
+  display: flex;
+  gap: 24px;
+  justify-content: center;
+}
+
+
+.img-gallery {
+  width: 100%;
+  height: 100%;
+
+}
+
+li.gallery{
+  list-style-type: none;
+}
+
+
+input  {
+  border: 1px solid #000;
+width: 360px;
+height: 40px;
+padding-left: 16px;
+}
+
+.placeholder {
   font-family: "Montserrat", sans-serif;
 font-weight: 400;
 font-size: 16px;
 line-height: 1.5;
 letter-spacing: 0.04em;
 color: #2e2f42;
-width: 360px;
-height: 40px;
-border: 1px solid #000;
-margin-bottom: 8px;
-padding-top: 8px;
-padding-bottom: 8px;
-padding-left: 16px;
-;
-
 }
 
-.gallery {
-  display: flex;
-  list-style-type: none;
-  flex-direction: row;
-  flex-wrap: wrap;
-  row-gap: 48px;
-  column-gap: 24px;
-  width: 1440px;
-  margin-left: 156px;
-  margin-right: 156px;
-  margin-top: 100px;
-}
+h1 {
+  margin-top: 16px;
+  font-family: "Montserrat", sans-serif;
+font-weight: 600;
+font-size: 24px;
+line-height: 1.33333;
+letter-spacing: 0.04em;
+color: #2e2f42;
 
-.img-gallery {
+} 
+
+.login-form {
   width: 360px;
-  height: 300px;
-
+  height: 40px;
+  background: #fff;
+font-family: "Montserrat", sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: #2e2f42;
+  padding: 8px 16px;
+  margin-top: 24px;
+    margin-bottom: 16px;
+    margin-left: 24px;
+    gap: 8px;
 }
 
+input {
+}
+
+.login-form button {
+  margin-top: 16px;
+  border-radius: 8px;
+  padding: 8px 16px;
+  width: 86px;
+  height: 40px;
+  background: #4e75ff;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: #fff;
+  border: none;
+}
+
+.login-form label {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: #2e2f42;
+  gap: 8px;
+}
+
+
+/* task 5 */
+
+.widget {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
+.widget p, .widget span {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: #2e2f42;}
+
+  .widget button {
+    font-family: "Montserrat", sans-serif;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    color: #fff;
+    border-radius: 8px;
+    padding: 8px 16px;
+    width: 148px;
+    height: 40px;
+    background: #4e75ff;
+    border: none;
+}
